--- a/.github/workflows/cypress-cucumber.yml
+++ b/.github/workflows/cypress-cucumber.yml
@@ -4,7 +4,7 @@ on:
         branches: [master]
 jobs:
     Run_test:
-        runs-on: ubuntu-latest
+        runs-on: windows-latest
         strategy:
             matrix:
                 node-version: [14.17.0]
